# f1-data-analysis

./: README.md  main.py  pyproject.toml
assignment/: Jonatas EmAssignment #3_ Hands-On Data Prep (10 points).md
assignment/fases/: data_cleaning_notebook.ipynb  data_transformation_notebook.ipynb  data_transformation_with_sklearn.ipynb  data_validation_notebook.ipynb  feature_engineering_notebook.ipynb  fixed_data_cleaning_notebook.ipynb  train_test_with_feast_feature_store.ipynb
data/processed/: sprint_wins.csv
src/data/: cleaning.py  download.py  validation.py
src/features/: feature_engineering.py
src/visualization/: plots.py
