[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1_data_analysis"
version = "0.1.0"
description = "F1 Sprint Wins Analysis"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "kagglehub>=0.2.0",
    "pytest>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=21.5b2",
    "flake8>=3.9.2",
    "isort>=5.9.1",
    "mypy>=0.812",
    "pytest-cov>=2.12.1",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true